# militol_audio_analysis

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py  registry.py  schemas.py
bash/: train_emotion_job.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: intercepts.ts  types.ts
frontend/src/components/: InterceptDetailPanel.css  InterceptDetailPanel.tsx  InterceptLogPanel.css  InterceptLogPanel.tsx  MissionTimeline.css  MissionTimeline.tsx  OpsShell.css  OpsShell.tsx
frontend/src/constants/: filters.ts
frontend/src/styles/: global.css
frontend/src/utils/: text.ts
llm/: report.py
outputs/: my_eval_events.json
scripts/: demo.py  prep_mad.py  train_emotion.py
sed/: __init__.py  evaluate.py  infer.py  train.py  utils.py
src/: audio_utils.py  datasets.py  pipeline.py  settings.py
src/exploration/: first.py  plot_waveforms.py
src/models/: emotion_classifier.py
src/preprocessing/: vad.py  whiper_to_json.py  whisper_processor.py  whisper_to_json.py
src/training/: utils.py
src/utils/: logger.py
